# Tandau

./: .env  Docker-compose.yml  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  quizbit.postman_collection.json  quizbit_sample_db.sql  requirements.txt  requirments.txt
config/: admin.py  settings.py  urls.py  wsgi.py
quiz/: admin.py  models.py  serializers.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_answer_competitivesession_question_test_testsession_and_more.py
quizbit/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
